Update vercel.json configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
+  "redirects": [
+    { "source": "/favicon.ico", "destination": "/placeholder.svg", "permanent": true }
+  ],
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/((?!assets|.*\\..*).*)", "destination": "/index.html" }
   ]
 }
